<resources>
    <string name="app_name">Lab_Intents</string>
    <string name="btn_explicit">EXPLICIT</string>
    <string name="btn_implicit">IMPLICIT</string>
    <string name="btn_send">ПРАТИ ПОРАКА</string>
    <string name="btn_image">ВИДИ СЛИКА</string>
    <string name="edit_text_message">Внесете текст за прикажување....</string>
    <string name="btn_ok">Во ред</string>
    <string name="btn_cancel">Откажи</string>
</resources>